# uv-url-update-in-lock-fr-13024-1

./: pyproject.toml
.github/: dependabot.yml
